# AgentGuard

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CURRICULUM.md  Cargo.toml  DEMO-SCENARIOS.md  PRESS-KIT.md  README.es.md  README.md  SECURITY.md  STATS.md  TUTORIAL-KIT.md  agentguard.toml  carpetatest.txt  install.ps1  watcher-test.txt
.github/: CONTRIBUTING.md
.github/workflows/: deploy-landing.yml
choco/: agentguard.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
crates/agentguard-audit/: Cargo.toml
crates/agentguard-audit/src/: lib.rs
crates/agentguard-cli/: Cargo.toml
crates/agentguard-cli/src/: main.rs
crates/agentguard-cli/tests/: e2e.rs
crates/agentguard-core/: Cargo.toml
crates/agentguard-core/src/: error.rs  lib.rs  types.rs
crates/agentguard-daemon/: Cargo.toml
crates/agentguard-daemon/src/: handler.rs  lib.rs  main.rs  orchestrator.rs  watcher.rs
crates/agentguard-enforce/: Cargo.toml
crates/agentguard-enforce/src/: ace.rs  coordinator.rs  lib.rs
crates/agentguard-ipc/: Cargo.toml
crates/agentguard-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/agentguard-ipc/tests/: integration.rs
crates/agentguard-manifest/: Cargo.toml
crates/agentguard-manifest/src/: compiled.rs  discovery.rs  lib.rs  mandatory.rs  parser.rs
crates/agentguard-notify/: Cargo.toml
crates/agentguard-policy/: Cargo.toml
crates/agentguard-probe/: Cargo.toml
crates/agentguard-store/: Cargo.toml
crates/agentguard-tui/: Cargo.toml
crates/agentguard-tui/src/: lib.rs  main.rs
demo/: README.md  phylax.toml
docs/: 01-architecture.md  02-core-types.md  03-manifest-policy.md  04-storage-audit.md  05-detection-enforcement.md  06-ipc-daemon-cli.md
docs/adr/: README.md
driver/: README.md
landing/: astro.config.mjs
landing/public/: llms-full.txt  llms.txt  robots.txt  site.webmanifest  sitemap.xml
modules/agentguard-scanner/: Cargo.toml
modules/agentguard-team/: Cargo.toml
scripts/: winget-publish.ps1
(+41 files in other folders)
