[package]
name = "agentguard-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentguard-tui"
path = "src/main.rs"

[lib]
name = "agentguard_tui"
path = "src/lib.rs"

[dependencies]
agentguard-core.workspace = true
agentguard-ipc.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true

[lints]
workspace = true
